// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sync application is gated by the workspace completed upgrade version rejects sync when the workspace has not completed the required upgrade version 1`] = `
{
  "extensions": {
<<<<<<< HEAD
    "code": "BAD_USER_INPUT",
    "subCode": "WORKSPACE_VERSION_INCOMPATIBLE",
    "userFriendlyMessage": "This app requires a newer version than this organization has finished upgrading to. Please try again once the organization upgrade completes.",
=======
    "code": "NOT_FOUND",
    "subCode": "APPLICATION_NOT_FOUND",
    "userFriendlyMessage": "Application not found.",
>>>>>>> twenty/v2.45.0
  },
  "message": "No registration found for "<applicationUniversalIdentifier>". Create one first with createApplicationRegistration.",
  "name": "NotFoundError",
}
`;

exports[`Sync application is gated by the workspace completed upgrade version rejects sync when the workspace upgrade cursor cannot be interpreted 1`] = `
{
  "extensions": {
<<<<<<< HEAD
    "code": "BAD_USER_INPUT",
    "subCode": "INVALID_WORKSPACE_VERSION",
    "userFriendlyMessage": "This organization's upgrade state could not be determined. Please try again once the organization has finished upgrading.",
=======
    "code": "NOT_FOUND",
    "subCode": "APPLICATION_NOT_FOUND",
    "userFriendlyMessage": "Application not found.",
>>>>>>> twenty/v2.45.0
  },
  "message": "No registration found for "<applicationUniversalIdentifier>". Create one first with createApplicationRegistration.",
  "name": "NotFoundError",
}
`;
